[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Bullet.aseprite" type="SpriteFrames" id=1]
[ext_resource path="res://entities/BulletLauncher.gd" type="Script" id=2]
[ext_resource path="res://entities/Bullet.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/implosion.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/bulletshoot.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/bullet_hit.wav" type="AudioStream" id=6]
[ext_resource path="res://util/soundsetter.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 7.52769

[sub_resource type="Curve" id=2]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, -200 ), 0.0, 0.0, 0, 0, Vector2( 1, 200 ), 0.0, 0.0, 0, 0 ]

[node name="BulletLauncher" type="Node2D" groups=[
"bullet_launcher",
]]
script = ExtResource( 2 )

[node name="Bullet" type="RigidBody2D" parent="." groups=[
"bullet",
]]
scale = Vector2( 2, 2 )
z_index = 15
z_as_relative = false
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="Texture" type="AnimatedSprite" parent="Bullet"]
frames = ExtResource( 1 )

[node name="BulletArea" type="Area2D" parent="Bullet"]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet/BulletArea"]
shape = SubResource( 1 )

[node name="NewGameTimer" type="Timer" parent="Bullet"]
pause_mode = 2
one_shot = true

[node name="Timer" type="Timer" parent="."]

[node name="Implosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.8
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 60.0
direction = Vector2( 0, 0 )
gravity = Vector2( 0, 0 )
radial_accel = -100.0
radial_accel_curve = SubResource( 2 )
scale_amount = 2.0
color = Color( 1, 0.466667, 0, 1 )
hue_variation = -0.11
hue_variation_random = 1.0

[node name="ImplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.5
script = ExtResource( 7 )
offset = -16

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.88
script = ExtResource( 7 )
offset = 0

[node name="BulletHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
script = ExtResource( 7 )
[connection signal="body_entered" from="Bullet/BulletArea" to="Bullet" method="_on_collide"]
[connection signal="timeout" from="Bullet/NewGameTimer" to="Bullet" method="_on_NewGameTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
